contract-macro/tests/compile-fail/missing_feature_gate.rs
include!("../common/contract.rs");

fn main() {}
